--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -78,6 +78,7 @@ jobs:
   Report:
     if: failure()
     runs-on: ubuntu-latest
+    needs:  [lint, deploy]
     steps:
       - name: Output the information
         run: |
