--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: ${{ matrix.node-verson}}
 
       - name: Install the dependencies
-        uses: npm ci
+        run: npm ci
 
       - name: Build the project
-        uses: npm run build
+        run: npm run build
