--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -2,6 +2,7 @@ name: matrix demo
 on: push
 jobs:
   build:
+    continue-on-error: true
     strategy:
       matrix:
         node-verson: [12, 14, 16]
