--- a/.github/workflows/reusableWorkflows.yml
+++ b/.github/workflows/reusableWorkflows.yml
@@ -1,8 +1,22 @@
 name: Reusable workflows
-on: workflow_call
+on:
+  workflow_call:
+    inputs:
+      artifact-name:
+        description: Name of the deployable artifact
+        required: false
+        default: dist
+        type: string
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: testing the dummy workflow
+      - name: Get code
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ inputs.artifact-name}}
+      - name: List files
+        run: ls
+      - name: Output the DC information
         run: echo "Dinesh"
