providing input value

--- a/.github/workflows/use-reuse.yml
+++ b/.github/workflows/use-reuse.yml
@@ -72,6 +72,8 @@ jobs:
   deploy:
     needs: build
     uses: ./.github/workflows/reusableWorkflows.yml
+    with:
+      artifact-name: dist-files
     # uses: ..github/workflows/reusableWorkflows.yml
   Report:
     if: failure()
